--- a/ndxzsite/css/overlay.css
+++ b/ndxzsite/css/overlay.css
@@ -22,7 +22,7 @@
 
 /* you won't really need to change these except for maybe margins/paddings */
 #overlay { position: fixed; top: 0; left: 0; width: 100%; display: none; z-index: 3; }
-#dialog { position: fixed; top: 0; left: 0; text-align: left; width: 100%; padding: 0; margin: 0; }
+#dialog { position: fixed; top: 0; left: 0; text-align: left; width: 100%; padding: 0; margin: 0; z-index: 8;}
 #dialog-close { position: absolute; right: 24px; top: 24px; cursor: pointer; height: 16px; width: 16px; text-indent: -9999px; z-index: 8888; }
 #dialog-close a { display: block; width: 16px; height: 16px; }
 #dialog-close a:hover { opacity: 0.5; }
