--- a/ndxzsite/css/security.css
+++ b/ndxzsite/css/security.css
@@ -1,6 +1,18 @@
 /* password protection parts */
 /* parts can be changed via plugin as well */
-form#ndxz-protect {  }
-form#ndxz-protect p { margin-bottom: 3px; }
+form#ndxz-protect {
+    width: 100%;
+    left: 0;
+    position: absolute;
+    /* margin-left: -100px; */
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    z-index: 10;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    padding-top: 15%;
+}
+form#ndxz-protect p { margin-bottom: 3px; text-align: center; width: auto;}
 form#ndxz-protect div#ndxz_pwd input { border: 1px solid #666; font-size: 11px; padding: 4px; margin-bottom: 9px; }
 form#ndxz-protect div#ndxz_pwd_sbmt input {  }
