--- a/ndxzsite/default/base.css
+++ b/ndxzsite/default/base.css
@@ -26,7 +26,7 @@ object { display: block; }
 /* not recommended for change */
 #index {
     overflow: auto;
-    top: 0;
+    top: 10px;
     bottom: 0;
 	left: 0;
     position: fixed;
